--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(dag_independent_nodes)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
+include_directories(${PROJECT_SOURCE_DIR}/include)
+
+
 file(GLOB_RECURSE INC_FILES include/*)
 file(GLOB_RECURSE SRC_FILES src/*)
 
